--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.3",
+    "date-fns": "^3.6.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "heroicons": "^2.1.3",
     "next": "14.2.4",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "tailwind-styled-components": "^2.2.0"
   },
   "devDependencies": {
